fixed highlight tags spacing

--- a/sass/components/custom.scss
+++ b/sass/components/custom.scss
@@ -729,6 +729,7 @@ nav {
   .card-action {
     border-top: none;
     padding: 12px 0 24px;
+    height: 128px;
     a {
       margin-top: 12px;
       &:first-child {
